<resources>
    <string name="app_name">BloodNearMe</string>
    <string name="splash_lable">Blood Near Me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_how_work">How We Work?</string>
    <string name="welcome_heading">Hello Donor!!</string>
    <string name="welcome_line">Match the need and save a life today</string>
    <string name="signintxt">SIGN IN</string>
    <string name="signin2txt">Hello there, Welcome Back</string>
    <string name="signuptxt">SIGN UP</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home">Home</string>
    <string name="notificatin">Notification</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="spinner_title">Select Blood Group</string>
</resources>