<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelComePage"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="261dp"
            android:transitionName="logo_image"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="logo_text"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:fontFamily="@font/coustard_black"
            android:text="@string/welcome_heading"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/coustard"
            android:text="@string/welcome_line"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/SignInBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="signinscreen"
                android:backgroundTint="@color/red"
                android:background="@drawable/shape"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:transitionName="transition_SignIn"/>

            <Button
                android:id="@+id/SignUpBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="signupscreen"
                android:backgroundTint="@color/red"
                android:background="@drawable/shape"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:transitionName="transition_SignUp"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/welcome_how_work"
            android:textColor="@color/black"
            android:background="#00000000"/>

    </LinearLayout>

</ScrollView>